crates/core/tests/snapshots/webpack4_unpack__module-26.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
"use strict";
export const START = "_START";
export const STOP = "_STOP";
export const RESET = "_RESET";
export const SUCCESS = "_SUCCESS";
export const ERROR = "_ERROR";
