crates/core/tests/snapshots/webpack4_unpack__module-27.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
import { combineReducers } from "./module-11.js";
import { routerReducer } from "./module-18.js";
import "./module-13.js";
import main from "./module-36.js";
"use strict";
const a = combineReducers({
    router: routerReducer,
    main
});
export default a;
