crates/core/tests/snapshots/webpack4_unpack__module-28.snap
---
source: crates/core/tests/webpack4_unpack.rs
assertion_line: 210
expression: code
---
import { connect } from "./module-23.js";
import { compose } from "./module-11.js";
import "./module-27.js";
import "./module-13.js";
import { fetchData } from "./module-25.js";
import a from "./module-35.js";
const u = {
    fetchData
};
export default compose(connect(function(e) {
    return {
        data: e.main.data
    };
}, u))(a);
