crates/core/tests/snapshots/webpack4_unpack__module-31.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
"use strict";
export function a(e) {
    let t;
    const e_Symbol = e.Symbol;
    if (typeof e_Symbol === "function") {
        if (e_Symbol.observable) {
            t = e_Symbol.observable;
        } else {
            t = e_Symbol("observable");
            e_Symbol.observable = t;
        }
    } else {
        t = "@@observable";
    }
    return t;
}
