crates/core/tests/snapshots/webpack4_unpack__module-33.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
import "./module-22.js";
import { all, put, take } from "./module-17.js";
import { fetchDataSuccess, startFetchingData } from "./module-25.js";
import { FETCH_DATA } from "./module-19.js";
"use strict";
function* l() {
    while(true){
        yield take(FETCH_DATA);
        yield put(startFetchingData());
        yield put(fetchDataSuccess([]));
    }
}
function* c() {
    yield all([
        l()
    ]);
}
export default c;
