crates/core/tests/snapshots/webpack4_unpack__module-34.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
import { applyMiddleware, createStore } from "./module-11.js";
import o from "./module-22.js";
import { routerMiddleware } from "./module-18.js";
import { createBrowserHistory } from "./module-8.js";
import u from "./module-27.js";
import l from "./module-33.js";
"use strict";
export const history = createBrowserHistory();
const f = o();
const d = [
    routerMiddleware(history),
    f
];
const p = createStore(u, applyMiddleware(...d));
f.run(l);
export default p;
