crates/core/tests/snapshots/webpack4_unpack__module-35.snap
---
source: crates/core/tests/webpack4_unpack.rs
expression: code
---
import { Component } from "./module-50.js";
import "./module-28.js";
"use strict";
class i extends Component {
    componentDidMount() {
        this.props.fetchData();
    }
    render() {
        return <div><h1>Front page</h1></div>;
    }
}
export default i;
